--- a/docs/2024_workshops/bioinformatics101/01_linux101.md
+++ b/docs/2024_workshops/bioinformatics101/01_linux101.md
@@ -47,7 +47,7 @@ Linux is a free, open-source, and Unix-like operating system kernel that was ori
 
 **Shell** is like a translator and bridge between you and the operating system's core, the **kernel**. It takes the commands you type and interprets them, telling the kernel what actions to perform. 
 
-<img src="/Users/yucheng/Library/Application Support/typora-user-images/image-20240903160616425.png" alt="image-20240903160616425" style="zoom:50%;" />
+<img src="images/shell.png" alt="shell" style="zoom:50%;" />
 
 
 
@@ -77,7 +77,7 @@ Linux is a free, open-source, and Unix-like operating system kernel that was ori
 
 ### File permissions
 
-<img src="/Users/yucheng/Library/Application Support/typora-user-images/image-20240903160924913.png" alt="image-20240903160924913" style="zoom:50%;" />
+<img src="images/file_permission.png" alt="file permission" style="zoom:50%;" />
 
 ### File names
 
