--- a/docs/2024_workshops/bioinformatics101/01_linux101.md
+++ b/docs/2024_workshops/bioinformatics101/01_linux101.md
@@ -113,7 +113,7 @@ Files are referred to by their location called the **path**
 - Relative Path (From my current location)
   - user01/file01
 
-<img src="/Users/yucheng/Documents/GitHub/Tufts_2024Fall_Training/images/file_system.png" alt="file_system" style="zoom:50%;" />
+<img src="images/file_system.png" alt="file_system" style="zoom:50%;" />
 
 ## Must-known Linux/Unix tools
 
